2005-04-27  Nathaniel Smith  <njs@codesourcery.com>

	* AUTHORS: Add Timothy Brownawell.

2005-04-27  Timothy Brownawell  <tbrownaw@gmail.com>

	* ui.{cc,hh}: Delegate tick line blanking to tick_writers.

2005-04-26  Nathaniel Smith  <njs@codesourcery.com>

	* work.cc: Don't include boost/regex.hpp.

2005-04-26  Nathaniel Smith  <njs@codesourcery.com>

	* manifest.cc, inodeprint.cc: Don't include boost/regex.hpp.

2005-04-26  Nathaniel Smith  <njs@codesourcery.com>

	* sqlite/vdbeaux.c (MAX_6BYTE): Apply patch from
	http://www.sqlite.org/cvstrac/chngview?cn=2445.  It shouldn't
	affect monotone's usage, but just in case.

2005-04-26  Nathaniel Smith  <njs@codesourcery.com>

	* rcs_import.cc (struct cvs_key, process_branch): Fix
	indentation.
	(build_change_set): Handle the case where a file is "added dead".

	* tests/t_cvsimport2.at: Un-XFAIL, improve description.

2005-04-22  Christof Petig <christof@petig-baender.de>

	* sqlite/*: update to sqlite 3.2.1

2005-04-25  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_i18n_file_data.at: New test.
	* testsuite.at: Add it.

2005-04-27  Matt Johnston  <matt@ucc.asn.au>

	* change_set.cc (extend_state): don't mix find() and insert() on
	the path_state, to avoid hitting the smap's worst-case.

2005-04-27  Matt Johnston  <matt@ucc.asn.au>

	* change_set.cc (confirm_proper_tree): move things out of the loops
	for better performance.

2005-04-26  Matt Johnston  <matt@ucc.asn.au>

	* change_set.cc (analyze_rearrangement): get rid of damaged_in_first
	since it is not used.

2005-04-26  Matt Johnston  <matt@ucc.asn.au>

	* monotone.texi: fix mashed up merge of docs for kill_rev_locally
	and db check.

2005-04-25  Nathaniel Smith  <njs@codesourcery.com>

	* automate.cc (automate_parents, automate_children) 
	(automate_graph): New automate commands.
	(automate_command): Add them.
	* commands.cc (automate): Synopsisfy them.
	* monotone.texi (Automation): Document them.