@@ -57,6 +57,7 @@ contributing authors, including:
   Sebastian Spaeth <Sebastian@SSpaeth.de>
   Joel Reed <joelwreed@comcast.net>
   Timothy Brownawell <tbrownaw@gmail.com>
+  Matthew Gregan <kinetik@orcon.net.nz>
 
 supporting files:
 -----------------
