@@ -1,3 +1,9 @@
+2005-04-27  Matthew Gregan  <kinetik@orcon.net.nz>
+
+	* tests/t_cvsimport_manifest_cycle.at: New test.
+	* testsuite.at: Add test.
+	* AUTHORS: Add self.
+
 2005-04-27  Nathaniel Smith  <njs@codesourcery.com>
 
 	* AUTHORS: Add Timothy Brownawell.
